{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 15,
  "lineage": "63f1daff-bfd7-20b7-1b3b-6fe6fb9c3614",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-042cf498475d58578",
            "domain": "vpc",
            "id": "eipalloc-04b225fd549b7d7be",
            "instance": "i-04a66a09b840dd9d8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f2e2b1b4094618ee",
            "private_dns": "ip-10-0-1-91.ap-south-1.compute.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-13-232-232-251.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.232.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.IP_example",
            "aws_security_group.App_SG",
            "aws_subnet.my_app-subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "IP_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:014728856463:instance/i-04a66a09b840dd9d8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a66a09b840dd9d8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Web-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2e2b1b4094618ee",
            "private_dns": "ip-10-0-1-91.ap-south-1.compute.internal",
            "private_ip": "10.0.1.91",
            "public_ip": "13.235.134.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efebc561826ea668",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b6e2f6557be0d74a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d36eee51831f",
            "tags": {
              "Name": "WebServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b6e2f6557be0d74a"
            ]
          },
          "dependencies": [
            "aws_security_group.App_SG",
            "aws_subnet.my_app-subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014728856463:internet-gateway/igw-05cc9654c7cf542f3",
            "id": "igw-05cc9654c7cf542f3",
            "owner_id": "014728856463",
            "tags": {
              "Name": "MY_IGW"
            },
            "vpc_id": "vpc-020e0de37b4075471"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05cc9654c7cf542f3",
            "id": "r-rtb-067a050e2877f4b711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067a050e2877f4b71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_IG",
            "aws_route_table.my_route-table",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-067a050e2877f4b71",
            "owner_id": "014728856463",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MY_Route_table"
            },
            "vpc_id": "vpc-020e0de37b4075471"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "App_Route_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c467cfdb7733b52b",
            "route_table_id": "rtb-067a050e2877f4b71",
            "subnet_id": "subnet-02723d36eee51831f"
          },
          "dependencies": [
            "aws_route_table.my_route-table",
            "aws_subnet.my_app-subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "App_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014728856463:security-group/sg-0b6e2f6557be0d74a",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6e2f6557be0d74a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "App_SG",
            "name_prefix": "",
            "owner_id": "014728856463",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-020e0de37b4075471"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014728856463:subnet/subnet-02723d36eee51831f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02723d36eee51831f",
            "map_public_ip_on_launch": true,
            "owner_id": "014728856463",
            "tags": {
              "Name": "APP_Subnet"
            },
            "vpc_id": "vpc-020e0de37b4075471"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014728856463:vpc/vpc-020e0de37b4075471",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07111673a711edfc3",
            "default_route_table_id": "rtb-0e0fe4153e6315dd8",
            "default_security_group_id": "sg-0bc37c301428d5188",
            "dhcp_options_id": "dopt-3b7fb750",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-020e0de37b4075471",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e0fe4153e6315dd8",
            "owner_id": "014728856463",
            "tags": {
              "Name": "MY_VPC"
            }
          }
        }
      ]
    }
  ]
}